--- a/index.html
+++ b/index.html
@@ -9,5 +9,14 @@
 </head>
 <body>
     
+    <nav class="navbar">
+        <div class="container">
+            <div class="aperture">
+                
+            </div>
+        </div>
+    </nav>
+
+
 </body>
 </html>
