--- a/index.html
+++ b/index.html
@@ -12,11 +12,95 @@
     <nav class="navbar">
         <div class="container">
             <div class="aperture">
+                <img src="./img/Combined-Shape (1).png" alt="">
+                <ul class="aper_list">
+                    <li class="aper_item">
+                        <a href="#">Business areas</a>
+                    </li>
+
+                    <li class="aper_item">
+                        <a href="#">Featured images</a>
+                    </li>
+
+                    <li class="aper_item">
+                        <a href="#">Gear cage</a>
+                    </li>
+
+                    <li class="aper_item">
+                        <a href="#">Contact</a>
+                    </li>
+                </ul>
                 
+                <a class="getone" href="#">Get template</a>
+
             </div>
         </div>
     </nav>
 
 
+    <main class="main">
+        <div class="container">
+            <div class="study">
+                <div class="study_text">
+                    <h5>Photographer & Filmmaker</h5>
+                    <h1>Aperture Studios</h1>
+                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+                </div>
+            </div>
+        </div>
+    </main>
+
+
+
+    <section class="section1">
+        <div class="container">
+            <div class="what">
+                <h1>What we do.</h1>
+                <p>The areas that we're specialized in.</p>
+
+                <ul class="what_list">
+                    <li class="what_item">
+                        <img src="./img/IMAGE.png" alt="">
+                        <div class="what_text">
+                        <h3>Product Photography</h3>
+                        <h5>Cras commodo consequat orci, in convallis risus egestas non. Nulla efficitur auctor hendrerit. Etiam ut orci varius, faucibus libero ac, cursus quam</h5>
+                        <a href="#">Read more</a>
+                       </div>
+                    </li>
+
+                    <li class="what_item">
+                        <img src="./img/IMAGE (1).png" alt="">
+                        <div class="what_text">
+                        <h3>Architecture Photography</h3>
+                        <h5>Aenean porta neque eget consequat fringilla. Vestibulum ultrices, orci nec egestas pharetra, ligula est semper enim, nec auctor sapien leo nec purus. Fusce tincidunt aliquet sapien, sit amet rhoncus leo imperdiet nec.</h5>
+                        <a href="#">Read more</a>
+                       </div>
+                    </li>
+
+                   
+                </ul>
+
+                <ul class="what_list2">
+                    <li class="what_item">
+                        <img src="./img/IMAGE (2).png" alt="">
+                        <div class="what_text2">
+                        <h3>Drone Photography</h3>
+                        <h5>Mauris euismod elit et nisi ultrices, ut faucibus orci tincidunt. Duis tristique sed lorem a vestibulum. Cras commodo consequat orci, in convallis risus egestas non. Nulla efficitur auctor hendrerit. Etiam ut orci varius, faucibus libero ac, cursus quam.</h5>
+                        <a href="#">Read more</a>
+                       </div>
+                    </li>
+
+                    <li class="what_item">
+                        <img src="./img/IMAGE (3).png" alt="">
+                        <div class="what_text2">
+                        <h3>Wildlife Photography</h3>
+                        <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque aliquam odio et faucibus. Nulla rhoncus feugiat eros quis consectetur. Morbi neque ex, condimentum dapibus congue et, vulputate ut ligula. Vestibulum sit amet urna turpis.</h5>
+                        <a href="#">Read more</a>
+                       </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
